Corrected a problem with rows and white space. Working on solving overlay issue.

--- a/css/style.css
+++ b/css/style.css
@@ -82,8 +82,8 @@ strong {
     content: '';
     position: absolute;
     bottom: 19px;
-    left: 0px;
-    width: 0%;
+    left: 0;
+    width: 0;
     border-bottom: 2px solid #f9f9f9;
     transition: 0.4s;
 }
@@ -132,11 +132,6 @@ p {
     font-weight: 300;
     line-height: 1.45em;
 }
-
-
-/*#features .offset {
-	margin-left: 10%;
-}*/
 
 
 
@@ -446,6 +441,21 @@ i.fa.fa-phone {
     animation-delay: 1.25s;
 }
 
+
+.overlay-dark {
+    position: absolute;
+    background: rgba(0, 0, 0, .6);
+    background-size: 100% 100%;
+    height: 100%;
+    width: 100%;
+    z-index: 0;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+
 .overlay {
     position: absolute;
     background: rgb(85,181,243); /* Old browsers */
@@ -458,18 +468,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#55b5f3', end
     z-index: 0;
     top: 0;
     bottom: 0;
+    left: 0;
+    right: 0;
 }
 
-.overlay-dark {
-    position: absolute;
-    background: rgba(0, 0, 0, .6);
-    background-size: 100% 100%;
-    height: 100%;
-    width: 100%;
-    z-index: 0;
-    top: 0;
-    bottom: 0;
-}
 
 
 @-webkit-keyframes Background {
@@ -510,9 +512,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#55b5f3', end
 
 #hero {
     background: none;
-    height: calc(100vh);
     color: #f9f9f9;
-    z-index -10;
+    z-index: -10;
 }
 
 .hero-img-1 {
@@ -523,6 +524,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#55b5f3', end
     z-index: -1;
     top: 0;
     bottom: 0;
+    left: 0;
+    right: 0;
     background-position: center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -540,6 +543,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#55b5f3', end
     z-index: -1;
     top: 0;
     bottom: 0;
+    left: 0;
+    right: 0;
     background-position: center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -563,6 +568,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#55b5f3', end
     z-index: -1;
     top: 0;
     bottom: 0;
+    left: 0;
+    right: 0;
     background-position: center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -654,6 +661,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#55b5f3', end
     z-index: -1;
     top: 0;
     bottom: 0;
+    left: 0;
+    right: 0;
     background-position: center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
